--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
           <a href="#why" class="ev-nav-link">Why Edvengers</a>
           <a href="#classes" class="ev-nav-link">Classes &amp; Schedule</a>
           <a href="#pricing" class="ev-nav-link">Fees &amp; Registration</a>
-          <a href="student-hub.html" class="ev-nav-link">Student Hub</a>
-          <a href="teacher.html" class="ev-nav-link">Teacher Login</a>
+          <a href="student-hub.html" class="btn btn-primary btn-nav">Student Hub</a>
+<a href="teacher.html" class="btn btn-ghost btn-nav">Teacher Login</a>
         </nav>
       </div>
     </header>
