--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
         <div class="ev-container ev-hero-grid">
           <div class="ev-hero-text">
             <p class="ev-eyebrow">Online English &amp; Math for Singapore Primary</p>
-            <h1>Where Young Singapore Heroes Learn</h1>
+            <h1>Where Young Heroes Learn</h1>
             <p class="ev-hero-sub">
-              Edvengers is an online tuition programme for Singapore primary students,
-              combining live Zoom lessons with an engaging learning hub that makes
-              practice feel exciting, not boring.
+              Edvengers is an online tuition programme for primary students learning the Singapore curriculum.
+  Lessons are conducted live on Zoom with highly engaging, interactive teaching — polls, quizzes
+  and real-time feedback — supported by a simple, well-organised online hub so practice feels clearer
+  and less stressful.
             </p>
             <ul class="ev-hero-points">
               <li>MOE &amp; PSLE aligned programmes</li>
@@ -232,7 +233,7 @@
               After the chat, you can decide comfortably if you’d like to start.
             </p>
             <a
-              href="https://forms.gle/your-google-form-link-here"
+              href="https://forms.gle/4LNgPatN54JLB5xs6"
               class="btn btn-primary"
               target="_blank"
               rel="noopener noreferrer"
@@ -245,32 +246,86 @@
 
       <!-- FAQ -->
       <section class="ev-section ev-section-alt">
-        <div class="ev-container">
-          <div class="ev-section-header">
-            <h2>Frequently Asked Questions</h2>
-          </div>
+  <div class="ev-container">
+    <div class="ev-section-header">
+      <h2>Frequently Asked Questions</h2>
+    </div>
 
-          <div class="ev-faq">
-            <div class="ev-faq-item">
-              <h3>Is Edvengers aligned with the MOE syllabus and PSLE?</h3>
-              <p>
-                Yes. Our lessons are designed around the latest
-                <strong>MOE syllabus</strong> and <strong>PSLE paper formats</strong>.
-                We don’t rush far ahead of school – instead, we try to follow your child’s
-                <strong>learning pace in school</strong> as closely as possible.
-              </p>
-              <p>
-                The goal is to <strong>complement, not replace</strong> what teachers are
-                already doing in class. We strengthen key topics, reinforce what was taught
-                in school, and provide extra practice and strategies so students feel more
-                confident when they see similar questions in tests and exams.
-              </p>
-            </div>
+    <div class="ev-faq">
+      <div class="ev-faq-item">
+        <h3>Is Edvengers aligned with the MOE syllabus and PSLE?</h3>
+        <p>
+          Yes. Our lessons are designed around the latest
+          <strong>MOE syllabus</strong> and <strong>PSLE paper formats</strong>.
+          We don’t rush far ahead of school – instead, we try to follow your child’s
+          <strong>learning pace in school</strong> as closely as possible.
+        </p>
+        <p>
+          The goal is to <strong>complement, not replace</strong> what teachers are
+          already doing in class. We strengthen key topics, reinforce what was taught
+          in school, and provide extra practice and strategies so students feel more
+          confident when they see similar questions in tests and exams.
+        </p>
+      </div>
 
-            <!-- You can add more FAQ items here later -->
-          </div>
-        </div>
-      </section>
+      <div class="ev-faq-item">
+        <h3>What makes Edvengers different from other tuition?</h3>
+        <p>
+          We focus heavily on <strong>engagement and clarity</strong>. Lessons are taught by
+          experienced ex-MOE teachers, and each session includes:
+        </p>
+        <ul class="ev-bullet-list">
+          <li>Interactive polls and quizzes</li>
+          <li>Exam-style questions attempted together</li>
+          <li>Step-by-step worked solutions</li>
+          <li>Clear explanations of why answers are right or wrong</li>
+        </ul>
+        <p>
+          Students are encouraged to ask questions, try, and learn from mistakes in a supportive
+          environment – not just sit and copy notes.
+        </p>
+      </div>
+
+      <div class="ev-faq-item">
+        <h3>Who are the teachers?</h3>
+        <p>
+          Edvengers lessons are designed and taught by <strong>experienced ex-MOE teachers</strong>
+          who understand classroom realities, common misconceptions, and PSLE expectations.
+        </p>
+        <p>
+          We combine that experience with engaging online delivery so students get both
+          <strong>strong content</strong> and <strong>effective, modern teaching</strong>.
+        </p>
+      </div>
+
+      <div class="ev-faq-item">
+        <h3>Are lesson recordings provided?</h3>
+        <p>
+          For now, we focus on <strong>live participation</strong>, as students learn best when
+          they are present, asking questions and responding to activities in real time.
+        </p>
+        <p>
+          We are working towards providing <strong>limited-time access to selected lesson recordings</strong>
+          in future. In the meantime, key materials and explanations are reinforced through homework,
+          revision worksheets, and in-class review.
+        </p>
+      </div>
+
+      <div class="ev-faq-item">
+        <h3>How do you support students outside lesson time?</h3>
+        <p>
+          Students receive regular homework through the Edvengers online hub. Selected work is reviewed with
+          <strong>model answers, exam-style phrasing, and clear explanations</strong> so they know exactly how
+          to improve.
+        </p>
+        <p>
+          They can also submit academic questions through the portal’s Q&amp;A feature (in development),
+          and teachers will respond during class or via the platform.
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
     </main>
 
     <footer class="ev-footer">
