--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
           <a href="#pricing" class="ev-nav-link">Fees &amp; Registration</a>
           <a href="#faq" class="ev-nav-link">FAQ</a>
 
-          <!-- Top-right buttons -->
-          <a href="student-hub.html" class="btn btn-primary btn-nav">Student Hub</a>
-          <a href="teacher.html" class="btn btn-ghost btn-nav">Teacher Login</a>
+          <a href="student-hub.html" class="btn btn-primary btn-nav">
+            Student Hub
+          </a>
+          <a href="teacher.html" class="btn btn-ghost btn-nav">
+            Teacher Login
+          </a>
         </nav>
       </div>
     </header>
@@ -50,13 +53,16 @@
             </ul>
 
             <div class="ev-hero-actions">
-              <a href="#pricing" class="btn btn-primary">View Fees &amp; Register</a>
-              <a href="#classes" class="btn btn-ghost">See Class Schedule</a>
+              <a href="#pricing" class="btn btn-primary">
+                View Fees &amp; Register
+              </a>
+              <a href="#classes" class="btn btn-ghost">
+                See Class Schedule
+              </a>
             </div>
           </div>
 
           <div class="ev-hero-image-wrap">
-            <!-- Use your light hero banner; rename if needed -->
             <img
               src="images/hero-banner.png"
               alt="Edvengers online lesson with superhero-themed students"
@@ -123,9 +129,9 @@
           <div class="ev-column">
             <h2>Built for Busy Families</h2>
             <p>
-              All lessons are conducted <strong>live on Zoom</strong> and supported
-              by the Edvengers online portal, so students and parents can find
-              everything in one place.
+              All lessons are conducted <strong>live on Zoom</strong> and
+              supported by the Edvengers online portal, so students and parents
+              can find everything in one place.
             </p>
             <ul class="ev-bullet-list">
               <li><strong>No travelling time</strong> to tuition centres</li>
@@ -136,14 +142,14 @@
               <li>Easy access to lesson links and materials</li>
             </ul>
             <p>
-              Our lessons closely complement what students are learning in school,
-              rather than racing far ahead. We aim to
+              Our lessons closely complement what students are learning in
+              school, rather than racing far ahead. We aim to
               <strong>reinforce school learning</strong> so students feel more
               confident in class and in exams.
             </p>
             <p>
-              Students only need a device with internet access – laptop, tablet or
-              mobile phone – and a quiet space to learn.
+              Students only need a device with internet access – laptop, tablet
+              or mobile phone – and a quiet space to learn.
             </p>
           </div>
         </div>
@@ -155,8 +161,8 @@
           <div class="ev-column">
             <h2>Engaging &amp; Supportive Learning</h2>
             <p>
-              We know that upper primary can feel stressful – especially with PSLE
-              on the horizon. Our job is to make learning feel
+              We know that upper primary can feel stressful – especially with
+              PSLE on the horizon. Our job is to make learning feel
               <strong>structured, encouraging and achievable</strong>.
             </p>
             <ul class="ev-bullet-list">
@@ -226,19 +232,18 @@
               <li>Materials and homework included</li>
             </ul>
             <p>
-              Because every child’s situation is different, we prefer to understand
-              your child’s needs first before confirming a class and fee plan.
+              Because every child’s situation is different, we prefer to
+              understand your child’s needs first before confirming a class and
+              fee plan.
             </p>
-            <p>
-              Leave your details and we’ll reach out to:
-            </p>
+            <p>Leave your details and we’ll reach out to:</p>
             <ul class="ev-bullet-list">
               <li>Understand your child’s current level and concerns</li>
               <li>Recommend a suitable class and subject combination</li>
               <li>Share our current term fees and any pioneer-batch promotions</li>
               <li>
-                See how Edvengers can complement what your child is already doing
-                in school
+                See how Edvengers can complement what your child is already
+                doing in school
               </li>
             </ul>
 
@@ -264,14 +269,14 @@
               </li>
             </ol>
             <p class="ev-helper-text">
-              There is no obligation to sign up after the call – you’re welcome to
-              ask questions and decide what’s best for your child.
+              There is no obligation to sign up after the call – you’re welcome
+              to ask questions and decide what’s best for your child.
             </p>
           </div>
         </div>
       </section>
 
-      <!-- FAQ (Collapsible) -->
+      <!-- FAQ (COLLAPSIBLE) -->
       <section id="faq" class="ev-section ev-section-alt">
         <div class="ev-container">
           <div class="ev-section-header">
@@ -286,17 +291,18 @@
               <div class="ev-faq-answer">
                 <p>
                   Yes. Our lessons are designed around the latest
-                  <strong>MOE syllabus</strong> and <strong>PSLE paper formats</strong>.
-                  We don’t rush far ahead of school – instead, we try to follow
-                  your child’s <strong>learning pace in school</strong> as closely as
+                  <strong> MOE syllabus</strong> and
+                  <strong> PSLE paper formats</strong>. We don’t rush far ahead
+                  of school – instead, we try to follow your child’s
+                  <strong> learning pace in school</strong> as closely as
                   possible.
                 </p>
                 <p>
-                  The goal is to <strong>complement, not replace</strong> what teachers
-                  are already doing in class. We strengthen key topics, reinforce
-                  what was taught in school, and provide extra practice and strategies
-                  so students feel more confident when they see similar questions in
-                  tests and exams.
+                  The goal is to <strong>complement, not replace</strong> what
+                  teachers are already doing in class. We strengthen key topics,
+                  reinforce what was taught in school, and provide extra
+                  practice and strategies so students feel more confident when
+                  they see similar questions in tests and exams.
                 </p>
               </div>
             </details>
@@ -307,8 +313,9 @@
               </summary>
               <div class="ev-faq-answer">
                 <p>
-                  We focus heavily on <strong>engagement and clarity</strong>. Lessons
-                  are taught by experienced ex-MOE teachers, and each session includes:
+                  We focus heavily on <strong>engagement and clarity</strong>.
+                  Lessons are taught by experienced ex-MOE teachers, and each
+                  session includes:
                 </p>
                 <ul class="ev-bullet-list">
                   <li>Interactive polls and quizzes</li>
@@ -317,8 +324,9 @@
                   <li>Clear explanations of why answers are right or wrong</li>
                 </ul>
                 <p>
-                  Students are encouraged to ask questions, try, and learn from mistakes
-                  in a supportive environment – not just sit and copy notes.
+                  Students are encouraged to ask questions, try, and learn from
+                  mistakes in a supportive environment – not just sit and copy
+                  notes.
                 </p>
               </div>
             </details>
@@ -330,12 +338,13 @@
               <div class="ev-faq-answer">
                 <p>
                   Edvengers lessons are designed and taught by
-                  <strong>experienced ex-MOE teachers</strong> who understand classroom
-                  realities, common misconceptions, and PSLE expectations.
+                  <strong> experienced ex-MOE teachers</strong> who understand
+                  classroom realities, common misconceptions, and PSLE
+                  expectations.
                 </p>
                 <p>
-                  We combine that experience with engaging online delivery so students
-                  get both <strong>strong content</strong> and
+                  We combine that experience with engaging online delivery so
+                  students get both <strong>strong content</strong> and
                   <strong>effective, modern teaching</strong>.
                 </p>
               </div>
@@ -347,15 +356,16 @@
               </summary>
               <div class="ev-faq-answer">
                 <p>
-                  For now, we focus on <strong>live participation</strong>, as students
-                  learn best when they are present, asking questions and responding to
-                  activities in real time.
+                  For now, we focus on <strong>live participation</strong>, as
+                  students learn best when they are present, asking questions and
+                  responding to activities in real time.
                 </p>
                 <p>
                   We are working towards providing
-                  <strong>limited-time access to selected lesson recordings</strong> in
-                  future. In the meantime, key materials and explanations are reinforced
-                  through homework, revision worksheets, and in-class review.
+                  <strong> limited-time access to selected lesson recordings</strong>
+                  in future. In the meantime, key materials and explanations are
+                  reinforced through homework, revision worksheets, and in-class
+                  review.
                 </p>
               </div>
             </details>
@@ -366,15 +376,15 @@
               </summary>
               <div class="ev-faq-answer">
                 <p>
-                  Students receive regular homework through the Edvengers online hub.
-                  Selected work is reviewed with
-                  <strong>model answers, exam-style phrasing, and clear explanations</strong>
-                  so they know exactly how to improve.
+                  Students receive regular homework through the Edvengers online
+                  hub. Selected work is reviewed with
+                  <strong> model answers, exam-style phrasing, and clear
+                  explanations</strong> so they know exactly how to improve.
                 </p>
                 <p>
-                  They can also submit academic questions through the portal’s Q&amp;A
-                  feature (in development), and teachers will respond during class or via
-                  the platform.
+                  They can also submit academic questions through the portal’s
+                  Q&amp;A feature (in development), and teachers will respond
+                  during class or via the platform.
                 </p>
               </div>
             </details>
@@ -389,7 +399,7 @@
       </div>
     </footer>
 
-      // Footer year
+    <script>
       document.getElementById("year").textContent =
         new Date().getFullYear();
     </script>
