--- a/student-hub.html
+++ b/student-hub.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
-<body class="student-body">
+<body class="portal-body">
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">
