--- a/student-hub.html
+++ b/student-hub.html
@@ -14,7 +14,7 @@
         <span class="logo-text">Edvengers Student Hub</span>
       </div>
       <nav class="nav">
-        <a href="index.html">Back to Site</a>
+        <a href="index.html" class="btn btn-ghost btn-back">← Back to Main Site</a>
       </nav>
     </div>
   </header>
